fix: Adjust size and gap of gallery items
Adjust the gallery items' "images" to be of 150px size, and the gap
between them to be 50px, to be more accurate to the sample website.

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ button {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 32px;
+    gap: 50px;
 }
 
 .information-gallery-item {
@@ -126,8 +126,8 @@ button {
 
 .information-gallery-item-image {
     border: 3px solid #3882f6;
-    width: 128px;
-    height: 128px;
+    width: 150px;
+    height: 150px;
     border-radius: 8px;
 }
 
@@ -158,4 +158,10 @@ button {
     font-style: normal;
     text-align: right;
     padding-right: 32px;
+}
+
+.call {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
